# labelme-satellite-image-demo

./: LICENSE  Makefile  README.md  crop_geotiff.py  download_naip.py  labelme_to_geojson.py  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py  test_labelme_to_geojson.py
tests/data/: ok_m_3509603_nw_14_030_20230615_20230927_x3004_y11271_w499_h846.geojson  ok_m_3509603_nw_14_030_20230615_20230927_x3004_y11271_w499_h846.json  ok_m_3509603_nw_14_030_20230615_20230927_x3004_y11271_w499_h846.tif
tests/e2e/: labelme_to_geojson_test.py
