[project]
name = "labelme-satellite-image-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.1.1",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.9.0",
    "rioxarray>=0.22.0",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
]
