[project]
name = "labelme-satellite-image-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "labelme",
  "opencv-python>=4.11.0",
  "pillow>=12.1.1",
  "planetary-computer>=1.0.0",
  "pystac-client>=0.9.0",
  "rioxarray>=0.22.0",
  "shapely>=2.1.2",
  "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
  "ipython>=9.12.0",
  "mdformat>=1.0.0",
  "mdformat-frontmatter>=2.0.10",
  "pytest>=9.0.3",
  "ruff>=0.15.8",
  "taplo>=0.9.3",
  "ty>=0.0.27",
  "typos>=1.45.1",
  "yamlfix>=1.19.1",
]

[tool.ruff.lint]
select = [
  "ANN", # flake8-annotations
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.uv.sources]
labelme = { git = "https://github.com/wkentaro/labelme.git", rev = "main" }
